Added minigl support to SDL. Need custom minigl for this.

--- a/Makefile.wos_altivec_gl
+++ b/Makefile.wos_altivec_gl
@@ -15,7 +15,7 @@ CFLAGS = --specs=warpup -maltivec -I. -I../include -I./include/ -I./include/SDL 
 
 GLFLAGS = -DSHARED_LIB -DNO_AMIGADEBUG -lm
 
-GCCDEFINES = -DWARPOS -DENABLE_CYBERGRAPHICS -DNO_SIGNAL_H -D__MEM_AMIGA -DENABLE_AHI -DSDL_ALTIVEC_COPY -DSDL_ALTIVEC_BLITTERS
+GCCDEFINES = -DHAVE_OPENGL -DUSE_MGLAPI -DSDL_VIDEO_OPENGL -DWARPOS -DENABLE_CYBERGRAPHICS -DNO_SIGNAL_H -D__MEM_AMIGA -DENABLE_AHI -DSDL_ALTIVEC_COPY -DSDL_ALTIVEC_BLITTERS
 #-DNO_INLINE_STDARG
   
 
