--- a/Makefile.wos
+++ b/Makefile.wos
@@ -15,7 +15,7 @@ CFLAGS = --specs=warpup -maltivec -I. -I../include -I./include/ -I./include/SDL 
 
 GLFLAGS = -DSHARED_LIB -DNO_AMIGADEBUG -lm
 
-GCCDEFINES = -DWARPOS -DENABLE_CYBERGRAPHICS -DNO_SIGNAL_H -D__MEM_AMIGA -DENABLE_AHI -DSDL_ALTIVEC_COPY
+GCCDEFINES = -DWARPOS -DENABLE_CYBERGRAPHICS -DNO_SIGNAL_H -D__MEM_AMIGA -DENABLE_AHI
 #-DNO_INLINE_STDARG
   
 
