--- a/Makefile_altivec_gl
+++ b/Makefile_altivec_gl
@@ -10,23 +10,12 @@ VLD := vlink
 VCDEFINES = -DWARPOS -D__SIZE_T
 VCFLAGS = +aos68k -c99 -O2 -Igg:os-includeppc -Igg:os-includeppc/sdl
 
-DEFINES= DEFINE=ENABLE_CYBERGRAPHICS DEFINE=inline=__inline  DEFINE=NO_SIGNAL_H DEFINE=HAVE_STDIO_H DEFINE=ENABLE_AHI
-
-# DEFINE=HAVE_OPENGL
-INCLUDES= IDIR=./include/SDL
-#-I$(PREF)/m68k-unknown-amigaos/include -I$(PREF)/env/m68k-unknown-amigaos/sys-include
-CFLAGS = --specs=warpup -maltivec -I. -I../include -I./include/ -I./include/SDL -O2 -fomit-frame-pointer -DNO_AMIGADEBUG
-#DEBUG=FULL VERBOSE
-
-GLFLAGS = -DSHARED_LIB -DNO_AMIGADEBUG -lm
-
-GCCDEFINES = -DWARPOS -DENABLE_CYBERGRAPHICS -DNO_SIGNAL_H -D__MEM_AMIGA -DENABLE_AHI
-#-DNO_INLINE_STDARG
-  
+CFLAGS = --specs=warpup -maltivec -I. -I../include -I./include/ -I./include/SDL -O2 -fomit-frame-pointer
+GCCDEFINES = -DNO_AMIGADEBUG -DHAVE_OPENGL -DUSE_MGLAPI -DSDL_VIDEO_OPENGL -DWARPOS -DENABLE_CYBERGRAPHICS -DNO_SIGNAL_H -D__MEM_AMIGA -DENABLE_AHI -DSDL_ALTIVEC_COPY -DSDL_ALTIVEC_BLITTERS
 
 GOBJS = audio/SDL_audio.go audio/SDL_audiocvt.go audio/SDL_mixer.go audio/SDL_wave.go audio/amigaos/SDL_ahiaudio.go \
 	main/SDL_error.go main/SDL_fatal.go video/SDL_RLEaccel.go video/SDL_blit.go video/SDL_blit_0.go \
-	video/SDL_blit_1.go video/SDL_blit_A.go video/SDL_blit_N.go \
+	video/SDL_blit_1.go video/SDL_blit_A.go video/SDL_blit_N.go video/amigaos/SDL_cgxgl_wrapper.go\
 	video/SDL_bmp.go video/SDL_cursor.go video/SDL_pixels.go video/SDL_surface.go video/SDL_stretch.go \
 	video/SDL_yuv.go video/SDL_yuv_sw.go video/SDL_video.go cpuinfo/SDL_cpuinfo.go \
 	timer/amigaos/SDL_systimer.go timer/SDL_timer.go joystick/SDL_joystick.go video/amigaos/SDL_cgxasm.go \
