--- a/Makefile_nolite
+++ b/Makefile_nolite
@@ -8,7 +8,7 @@ RL := ranlib
 VC  := vc
 VLD := vlink
 VCDEFINES = -DWARPOS -D__SIZE_T
-VCFLAGS = +aos68k -c99 -O3 -Iinclude -Igg:ppc-warpos/os-includeppc -Igg:ppc-warpos/include 
+VCFLAGS = +aos68k -c99 -O3 -Igg:os-includeppc -Igg:os-includeppc/sdl
 
 CFLAGS = --specs=warpup -maltivec -I. -I../include -I./include/ -I./include/SDL -O2 -fomit-frame-pointer
 GCCDEFINES = -DNO_AMIGADEBUG -DWARPOS -DSDL_ALTIVEC_COPY -DSDL_ALTIVEC_BLITTERS
