--- a/Makefile_altivec_gl
+++ b/Makefile_altivec_gl
@@ -8,7 +8,7 @@ RL := ranlib
 VC  := vc
 VLD := vlink
 VCDEFINES = -DWARPOS -D__SIZE_T
-VCFLAGS = +aos68k -c99 -O2 -Igg:os-includeppc -Igg:os-includeppc/sdl
+VCFLAGS = +aos68k -c99 -O3 -Iinclude -Igg:ppc-warpos/os-includeppc -Igg:ppc-warpos/include
 
 CFLAGS = --specs=warpup -maltivec -I. -I../include -I./include/ -I./include/SDL -O2 -fomit-frame-pointer
 GCCDEFINES = -DNO_AMIGADEBUG -DHAVE_OPENGL -DUSE_MGLAPI -DSDL_VIDEO_OPENGL -DWARPOS -DSDL_ALTIVEC_COPY -DSDL_ALTIVEC_BLITTERS
@@ -40,12 +40,12 @@ VOBJSELF = video/amigaos/SDL_cgxwm_68k.go video/amigaos/SDL_amigaevents_68k.go
 %.ll: %.s
 	$(AS) -o $@ $*.s
 
-all: libSDL_wos.a
+all: libSDLgl.a
 
-libSDL_wos.a: $(GOBJS) $(VOBJS)
-	-rm -f libSDL_wos.a
-	ar cru libSDL_wos.a $(GOBJS) $(VOBJSELF)
-	$(RL) libSDL_wos.a
+libSDLgl.a: $(GOBJS) $(VOBJS)
+	-rm -f libSDLgl.a
+	ar cru libSDLgl.a $(GOBJS) $(VOBJSELF)
+	$(RL) libSDLgl.a
 
 clean:
 	-rm -f $(GOBJS) $(VOBJS) $(VOBJSELF)
