Added AHI optimization by CowCat.

--- a/Makefile_altivec_gl
+++ b/Makefile_altivec_gl
@@ -8,7 +8,7 @@ RL := ranlib
 VC  := vc
 VLD := vlink
 VCDEFINES = -DWARPOS -D__SIZE_T
-VCFLAGS = +aos68k -c99 -O3 -Iinclude -Igg:ppc-warpos/os-includeppc -Igg:ppc-warpos/include
+VCFLAGS = +aos68k -c99 -O2 -Igg:os-includeppc -Igg:os-includeppc/sdl
 
 CFLAGS = --specs=warpup -maltivec -I. -I../include -I./include/ -I./include/SDL -O2 -fomit-frame-pointer
 GCCDEFINES = -DNO_AMIGADEBUG -DHAVE_OPENGL -DUSE_MGLAPI -DSDL_VIDEO_OPENGL -DWARPOS -DSDL_ALTIVEC_COPY -DSDL_ALTIVEC_BLITTERS
@@ -27,8 +27,8 @@ GOBJS = audio/SDL_audio.go audio/SDL_audiocvt.go audio/SDL_mixer.go audio/SDL_wa
 	video/amigaos/SDL_cgxyuv.go video/amigaos/SDL_cgxaccel.go video/amigaos/SDL_cgxgl_wrapper.go \
 	video/SDL_gamma.go stdlib/SDL_stdlib.go stdlib/SDL_string.go stdlib/SDL_malloc.go stdlib/SDL_getenv.go
 
-VOBJS = video/amigaos/SDL_cgxwm_68k.o video/amigaos/SDL_amigaevents_68k.o
-VOBJSELF = video/amigaos/SDL_cgxwm_68k.go video/amigaos/SDL_amigaevents_68k.go
+VOBJS = video/amigaos/SDL_cgxwm_68k.o video/amigaos/SDL_amigaevents_68k.o audio/amigaos/SDL_wait_68k.o
+VOBJSELF = video/amigaos/SDL_cgxwm_68k.go video/amigaos/SDL_amigaevents_68k.go audio/amigaos/SDL_wait_68k.go
 
 %_68k.o: %_68k.c
 	$(VC) $(VCFLAGS) $(VCDEFINES) -c $*_68k.c -o $@
@@ -40,12 +40,12 @@ VOBJSELF = video/amigaos/SDL_cgxwm_68k.go video/amigaos/SDL_amigaevents_68k.go
 %.ll: %.s
 	$(AS) -o $@ $*.s
 
-all: libSDLgl.a
+all: libSDL_wos.a
 
-libSDLgl.a: $(GOBJS) $(VOBJS)
-	-rm -f libSDLgl.a
-	ar cru libSDLgl.a $(GOBJS) $(VOBJSELF)
-	$(RL) libSDLgl.a
+libSDL_wos.a: $(GOBJS) $(VOBJS)
+	-rm -f libSDL_wos.a
+	ar cru libSDL_wos.a $(GOBJS) $(VOBJSELF)
+	$(RL) libSDL_wos.a
 
 clean:
 	-rm -f $(GOBJS) $(VOBJS) $(VOBJSELF)
